osk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocrsk-service
  namespace: ocrsk
spec:
  selector:
    app: ocrsk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
